--- a/snippets/site-nav.liquid
+++ b/snippets/site-nav.liquid
@@ -62,12 +62,12 @@
       </li>
     {% endif %}
   {% endfor %}
-    <li>
+    <li class="search">
       <a href="/search" class="">
           {% include 'icon-search' %}
         </a>
     </li>
-    <li>
+    <li class="cart">
       <a href="/cart" class="">
           {% include 'icon-cart' %}
           <span class="visually-hidden">{{ 'layout.cart.title' | t }}</span>
