--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -279,7 +279,7 @@
 ==============================================================================*/
 $grid-medium: 750px;
 $grid-large: 990px;
-$grid-widescreen: 1400px;
+$grid-widescreen: 1170px;
 $grid-gutter: 30px;
 $grid-gutter-mobile: 22px;
 
@@ -297,7 +297,7 @@ $widescreen: 'widescreen';
     - Default column widths: $grid-breakpoint-has-widths: ($small, $medium-up);
     - Default is no push classes
 ==============================================================================*/
-$grid-breakpoint-has-widths: ($small, $medium-up, $large-down, $medium-down, $large-up, $medium-up);
+$grid-breakpoint-has-widths: ($small, $medium-up, $large-down, $medium-down, $large-up, $widescreen);
 $grid-breakpoint-has-push: ($small, $medium-up);
 
 /*================ Color Variables ================*/
@@ -1220,10 +1220,10 @@ html {
 }
 
 .section-header {
-  margin-bottom: $section-spacing-small;
+  margin-bottom: 20px;
 
   @include media-query($medium-up) {
-    margin-bottom: $section-spacing;
+    margin-bottom: 20px;
   }
 }
 
@@ -1296,7 +1296,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 ($section-spacing-small / 2);
+  margin: 0 0 ($section-spacing-small / 4);
   font-family: $font-stack-header;
   font-weight: $font-weight-header;
   line-height: 1.2;
@@ -1322,8 +1322,7 @@ h1 {
 
 h2 {
   font-size: em(floor($font-size-header * 0.78));
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
+  text-transform: none;
 
   @include media-query($small) {
     font-size: em(floor(($font-size-header * 0.78) * 0.9));
@@ -1334,9 +1333,9 @@ h3 {
   font-size: em($font-size-header);
   text-transform: none;
   letter-spacing: 0;
-
+  font-weight: $font-weight-bold;
   @include media-query($small) {
-    font-size: em(floor($font-size-header * 0.78));
+    /*font-size: em(floor($font-size-header * 0.78));*/
   }
 }
 
@@ -1344,7 +1343,7 @@ h4 {
   font-size: em(floor($font-size-header * 0.68));
 
   @include media-query($small) {
-    font-size: em(floor(($font-size-header * 0.68) * 0.9));
+    /*font-size: em(floor(($font-size-header * 0.68) * 0.9));*/
   }
 }
 
@@ -2237,17 +2236,23 @@ $dropdown-padding: 11px 17px;
 }
 
 .site-nav {
+  width: 100%;
   position: relative;
   padding: 0;
-  text-align: center;
   margin: 25px 0;
+  text-align: center;
 
   a {
     padding: 3px 10px;
   }
 
   li {
+    width: 10%;
     display: inline-block;
+    text-align: center;
+  }
+  li.search, li.cart {
+    width: 3%;
   }
 }
 
@@ -2853,11 +2858,11 @@ $slick-dot-size-small: 10px;
 
 /*================ Index sections ================*/
 .index-section {
-  padding-top: $section-spacing-small;
+  /*padding-top: $section-spacing-small;*/
   padding-bottom: $section-spacing-small;
 
   @include media-query($medium-up) {
-    padding-top: $section-spacing;
+    /*padding-top: $section-spacing;*/
     padding-bottom: $section-spacing;
   }
 
@@ -3641,7 +3646,7 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
   position: relative;
   padding: 0 $gutter-site;
 
-  @include media-query($small) {
+  @include media-query($large-down) {
     border-bottom: 1px solid $color-border;
     padding: 0;
   }
@@ -3837,7 +3842,7 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
 }
 
 
-@include media-query($small) {
+@include media-query($large-down) {
   .site-header__icons {
     padding-right: $gutter-site-mobile;
   }
@@ -3862,7 +3867,7 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
   }
 
   .site-header__logo {
-    width: calc(100% - 132px);
+    width: calc(100% - 138px);
     display: inline-block;
     text-align: center;
     padding: 22px;
@@ -4265,6 +4270,7 @@ $nav-button-padding: 15px;
   width: 100%;
   padding: $nav-button-padding ($nav-button-padding * 2);
   font-size: $font-size-mobile-input;
+  line-height: 1.5;
 }
 
 .mobile-nav__link {
@@ -5701,24 +5707,24 @@ $toolbar-height-small: 46px;
   @include align-items(stretch);
   @include flex-wrap(wrap);
   width: auto;
-  margin-bottom: -$grid-gutter;
-  margin-left: -$grid-gutter;
+  /*margin-bottom: -$grid-gutter;*/
+  /*margin-left: -$grid-gutter;*/
 
   @include media-query($small) {
-    margin-bottom: -$grid-gutter-mobile;
-    margin-left: -$grid-gutter-mobile;
+    /*margin-bottom: -$grid-gutter-mobile;*/
+    /*margin-left: -$grid-gutter-mobile;*/
   }
 }
 
 .custom__item {
   @include flex(0 0 auto);
   margin-bottom: $grid-gutter;
-  padding-left: $grid-gutter;
+  /*padding-left: $grid-gutter;*/
   max-width: 100%;
 
   @include media-query($small) {
     @include flex(0 0 auto);
-    padding-left: $grid-gutter-mobile;
+    /*padding-left: $grid-gutter-mobile;*/
     margin-bottom: $grid-gutter-mobile;
 
     &.small--one-half {
@@ -5829,13 +5835,59 @@ $toolbar-height-small: 46px;
   width: 100%;
 }
 .logo {
-  background-position: 0 0;
+  background-position: 40% center;
   background: {
     image: url($svg-logo-icon);
     repeat: no-repeat;
-    size: 320px 30px;
   }
   text-indent: -9999px;
-  width: 320px;
+  width: 40% !important;
   height: 30px;
+}
+.section-video-container {
+  margin: 0 auto;
+  border: 10px solid #f4f4f4;
+}
+.video-info-container {
+  padding: 10px;
+} 
+.video-info--title {
+  font-weight: $font-weight-bold;
+  margin-bottom: 3px;
+}
+.video-info--info {
+  max-width: 60%;
+}
+
+.main-slick {
+  font-family:Arial;
+  width:500px;
+  display:block;
+  margin:0 auto;
+}
+.main-slick h3 {
+  background: #777;
+  color: #3498db;
+  font-size: 36px;
+  line-height: 100px;
+  margin: 10px;
+  padding: 2%;
+  position: relative;
+  text-align: center;
+}
+.main-slick .action {
+  display:block;
+  margin:100px auto;
+  width:100%;
+  text-align:center;
+}
+.main-slick .action a {
+  display:inline-block;
+  padding:5px 10px; 
+  background:#f30;
+  color:#fff;
+  text-decoration:none;
+}
+.main-slick .action a:hover{
+  background:#000;
 }
