--- a/snippets/collection-grid-item.liquid
+++ b/snippets/collection-grid-item.liquid
@@ -34,6 +34,7 @@
           {{ 'homepage.onboarding.collection_title' | t }}
         {% else %}
           {{ collection.title }}
+          {{ collection.description }}
         {% endif %}
       </h3>
     </div>
