--- a/snippets/collection-grid-item.liquid
+++ b/snippets/collection-grid-item.liquid
@@ -6,7 +6,7 @@
   {% assign collection_image = blank %}
 {% endif %}
 
-<div class="collection-grid-item">
+
   <a href="{% if collection.products == empty %}#{% else %}{{ collection.url }}{% endif %}" class="collection-grid-item__link">
     {% unless collection_image == blank %}
       <div class="collection-grid-item__overlay box ratio-container lazyload js"
@@ -34,9 +34,8 @@
           {{ 'homepage.onboarding.collection_title' | t }}
         {% else %}
           {{ collection.title }}
-          {{ collection.description }}
         {% endif %}
       </h3>
+      <p class="collection-grid-item__desc">{{ collection.description }}</p>
     </div>
   </a>
-</div>
