--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,5 +1,5 @@
 {{ content_for_index }}
-<div class="main-slick">
+<!-- <div class="main-slick">
   <div class="slider slider-for">
     <div><h3>1</h3></div>
     <div><h3>2</h3></div>
@@ -19,4 +19,4 @@
     <a href="#" data-slide="4">go to slide 4</a>
     <a href="#" data-slide="5">go to slide 5</a>
   </div>
-</div>
+</div> -->
