--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -18,7 +18,7 @@
       {%- assign grid_item_width = 'small--whole medium-up--one-third' -%}
   {% endcase %}
 
-  <div class="collection-grid">
+  <div class="collection-container">
       <div class="collection-slider-for">
       {% for block in section.blocks limit: section.blocks.size %}
         <div class="">
