--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -26,6 +26,7 @@
               <li class="site-footer__linklist-item">
                 <a href="{{ link.url }}">{{ link.title }}</a>
               </li>
+              <span class="h3">•</span>
             {% endfor %}
           </ul>
         {% endif %}
